omni/tests/goldens/types/undefined_ident_19.err
tests/goldens/types/undefined_ident_19.omni:1:20: error: undefined identifier "missing19"
     1 | let result19:int = missing19
       |                    ^^^^^^^^^
     2 | 
  hint: declare the variable with 'let missing19: <type> = <value>' or 'var missing19: <type> = <value>' before using it
